--- a/HotelWebsite/Gemfile
+++ b/HotelWebsite/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'devise'
 gem 'bootstrap_form'
 gem 'font-awesome-sass'
+gem 'rails_admin', '~> 1.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.0', '>= 5.0.0.1'
